# release-me

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
release_me/: __init__.py  cli.py  client.py
