[metadata]
name = release-me
author = Tadej Borovšak
author-email = tadeboro@gmail.com
summary = Simple Github CLI release helper
description-file = README.md
home-page = https://github.com/tadeboro/release-me
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    release_me

[entry_points]
console_scripts =
    releaseme = release_me.cli:main

[wheel]
universal = 1

[pbr]
warnerrors = true
